syntax = "proto3";

package pb;

service BJ21 {
    rpc CreateTable(CreateTableReq) returns (CreateTableRes) {}
    rpc JoinTable(JoinTableReq) returns (JoinTableRes) {}
    rpc StartStage(StartStageReq) returns (StartStageRes) {}
    rpc HIT(HITReq) returns (HITRes) {}
    rpc CalcResult(CalcResultReq) returns (CalcResultRes) {}
}

message CreateTableReq {
    string Name = 1;
}

message CreateTableRes {
    int32 Code = 1;
    string Msg = 2;
    CreateTableRes_Data Data = 3;
}

message CreateTableRes_Data {
    int32 TableIdx = 1;
}

message JoinTableReq {
    int32 TableIdx = 1;
}

message JoinTableRes {
    int32 Code = 1;
    string Msg = 2;
}

message StartStageReq {
    int32 TableIdx = 1;
}

message StartStageRes {
    int32 Code = 1;
    string Msg = 2;
}

message HITReq {
    int32 TableIdx = 1;
    int32 PNumber = 2;
}

message HITRes {
    int32 Code = 1;
    string Msg = 2;
}

message CalcResultReq {
    int32 TableIdx = 1;
}

message CalcResultRes {
    int32 Code = 1;
    string Msg = 2;
}